--- a/package.json
+++ b/package.json
@@ -1,3 +1,11 @@
-"scripts": {
-  "test": "echo \"All tests passed!\""
+{
+  "name": "mon-premier-projet",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"All tests passed!\""
+  },
+  "author": "",
+  "license": "ISC"
 }
